Modificacion de Postgres y Repositorio, adicion de endpoints adicionales y Dockerfile
